--- a/OpenPose-OpenCV.ipynb
+++ b/OpenPose-OpenCV.ipynb
@@ -354,7 +354,7 @@
    "metadata": {},
    "source": [
     "# Calculating the Theoretical Optimal Launch Angle\n",
-    "We are given (from the YOLO model) the following:\n",
+    "We are given the following:\n",
     "$$\\Delta y, a, \\Delta x, v_0$$\n",
     "In order to solve for $\\theta$, we will try to derive a quadratic equation in terms of $\\tan\\theta$ and then use the quadratic formula.\n",
     "Next, use kinematics equations. On the x-axis and y-axis, respectively:\n",
