--- a/OpenPose-OpenCV.ipynb
+++ b/OpenPose-OpenCV.ipynb
@@ -353,7 +353,7 @@
    "id": "3fb9779a-4dd9-4ce4-8d3d-7ae495e27ea5",
    "metadata": {},
    "source": [
-    "# Calculating the Theoretical Optimal Launch Angle\n",
+    "# Calculating the Theoretical Launch Angle\n",
     "We are given the following:\n",
     "$$\\Delta y, a, \\Delta x, v_0$$\n",
     "In order to solve for $\\theta$, we will try to derive a quadratic equation in terms of $\\tan\\theta$ and then use the quadratic formula.\n",
